Sun Feb  10 16:00:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/rake/doc/MIT-LICENSE: Add license file from upstream
	* lib/rake/doc/README.rdoc: Link to license file from Rake README
	* lib/rake/version.rb: Include README rdoc for Rake module overview

Sun Feb  10 15:26:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/rake/doc/*: Sync Rake rdoc files from upstream

Sun Feb 10 15:50:02 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_exec.h (DISPATCH_ARCH_DEPEND_WAY): use __asm__ __volatile__
	  instead of asm volatile.

Sun Feb 10 15:50:02 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* gc.h (SET_MACHINE_STACK_END): use __volatile__ instead of volatile.

Sun Feb 10 14:25:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* doc/rake/, lib/rake/doc/: Move Rake rdoc files to lib/rake

Sun Feb 10 12:10:25 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: test headers at first.

Sun Feb  10 12:00:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* doc/rake/*: Removed stale Rake static files

Sun Feb  10 09:10:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/pp.rb, lib/prettyprint.rb: Documentation for PP and PrettyPrint
	  Based on a patch by Vincent Batts [ruby-core:51253] [Bug #7656]

Sat Feb  9 21:11:21 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: move header files check to the beginning of
	  "header and library section".
	  test rlim_t with sys/types.h and sys/time.h for MirOS BSD.
	  sys/types.h and sys/time.h is guarded by #ifdef and the above
	  move is required for this change.

Sat Feb  9 17:45:58 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, version.c: prevent duplicated load paths by empty
	  version string, it does not work right now.

Sat Feb  9 17:38:41 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: fix arch parameters in help message.  [Bug #7804]

Sat Feb  9 13:13:00 2013  Zachary Scott  <zachary@zacharyscott.net>
